cdrkit (1.1.3) UNRELEASED; urgency=low

  [ Eduard Bloch ]
  * Fixed fishing for transfer size in sysfs, now ready for
    /dev/class/scsi_generic contents
  * Dealing with the last newline char when processing
    /proc/sys/dev/cdrom/info contents
  * print the track size in the info message when guessing
  * added some missing or probably missing definitions in
    wodim/CMakeLists.txt, restoring the reading from inf files
  * passing through the real file size to the UDF generator. Creating
    incorrect iso9660 but having it this way is better than no LFS at all.
  * removed md5* parts and integration from icedax, patch by
    Vladimir Nadvornik <nadvornik@suse.cz>
  * various small bugfixes or cosmetic fixes picked from still GPLed parts of
    cdrtools-2.01.01a24, excluding meta changes and big tree.c and mkisofs.c
    refactoring. Stream file name option enabled now.
  * wodim.1: "you have 4 seconds to abort ..."
  * defaults.c: Correct fallback to CDR_FIFOSIZE and correct error message
    on bad input.
  * tell the user his device is busy on Linux because it's mounted,  after
    looking at /proc/mounts

  [ Peter Samuelson ]
  * Clean up Linux-2.6 CD/DVD-R drive detection, clearer error messages.

 -- Eduard Bloch <blade@debian.org>  Tue, 23 Jan 2007 19:13:44 +0100

cdrkit (1.1.2) RELEASED; urgency=low

  [ Stefan Huehner ]
  * more Cstyle cleanups

  [ Eduard Bloch ]
  * stop confusion and bailing out if burnfree/burnproof options have been
    explicitely specified
  * be move carefull with -dummy when the DVD media may not support it
  * extracting drive's default speed in attach_mdvd()
  * automatic recorder device guessing code, currently Linux-only

  [ Peter Samuelson ]
  * Fix icedax cddb query, based on a patch from Heiko Schlenker

 -- Eduard Bloch <blade@debian.org>  Sat, 13 Jan 2007 00:45:38 +0100

cdrkit (1.1.1) RELEASED; urgency=low

  * added geteltorito script from Rainer Krienke

  [ Eduard Bloch ]